Fix - add missing email service config

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -26,11 +26,11 @@ jobs:
 
       - name: Run scraper
         env:
-          SITES_CONFIG: ${{ secrets.SITES_CONFIG }}
-          EMAIL_RECIPIENTS: ${{ secrets.EMAIL_RECIPIENTS }}
+          EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+          EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
-          EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
+          EMAIL_RECIPIENTS: ${{ secrets.EMAIL_RECIPIENTS }}
         run: npm start
 
       - name: Commit and push state
