--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: Wirescout
 
 on:
   schedule:
-    - cron: "0 * * * *" # Run every hour
+    - cron: "*/5 * * * *" # Run every 5 minutes
   workflow_dispatch: # Allow manual triggers
 
 jobs:
