--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -3,7 +3,7 @@ name: Wirescout
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/15 * * * *" # Run every 15 minutes
+    - cron: "0 */4 * * *" # Run every 4 hours
 
 jobs:
   scrape:
